--- a/asset/CSS/style.css
+++ b/asset/CSS/style.css
@@ -134,7 +134,7 @@ header{
 .card_recipe{
     display: grid;
     grid-template-columns: auto auto;
-    column-gap: 5rem;
+    column-gap: 10rem;
 }
 
 .card{
@@ -143,4 +143,26 @@ header{
     border: 1px solid #000000;
     color: black;
     padding: 0rem 2rem;
+}
+
+.toprecipe{
+    position: absolute;
+    top: 40%;
+}
+
+.gridaccueil{
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 5rem;
+    row-gap: 5rem;
+}
+
+.card_accueil{
+    background-color: #F2F5FA;
+    border-radius: 30px;
+    border: 1px solid #000000;
+    color: black;
+    padding: 0rem 2rem;
+    height: 8rem;
+    width: 30rem;
 }
